feature: Add aimlapi agent